packages/graphql-typescript-definitions/test/__snapshots__/cli.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli fails when there are syntax errors 1`] = `
Object {
  "error": Object {
    "cmd": "packages/graphql-typescript-definitions/bin/graphql-typescript-definitions 'packages/graphql-typescript-definitions/test/fixtures/malformed-query/documents/**/*.graphql' --schema-path 'packages/graphql-typescript-definitions/test/fixtures/malformed-query/schema.json'",
    "code": 1,
    "killed": false,
    "signal": null,
  },
  "stderr": "",
  "stdout": " ERROR  Syntax Error packages/graphql-typescript-definitions/test/fixtures/malformed-query/documents/Fragment.graphql (2:3) Expected {, found Name \\"name\\"

1: fragment Person on Person
2:   name
     ^
3:   relatives {

GraphQLError
    at syntaxError (node_modules/graphql/error/syntaxError.js:28:15)
    at expect (node_modules/graphql/language/parser.js:966:32)
    at many (node_modules/graphql/language/parser.js:1014:3)
    at parseSelectionSet (node_modules/graphql/language/parser.js:250:17)
    at parseFragmentDefinition (node_modules/graphql/language/parser.js:363:19)
    at parseDefinition (node_modules/graphql/language/parser.js:136:16)
    at parseDocument (node_modules/graphql/language/parser.js:106:22)
    at Object.parse (node_modules/graphql/language/parser.js:43:10)
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js:137:40)
    at Generator.next (<anonymous>)

",
}
`;

exports[`cli fails when there are syntax errors 2`] = `
Object {
  "error": Object {
    "cmd": "packages/graphql-typescript-definitions/bin/graphql-typescript-definitions 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/documents/**/*.graphql' --schema-path 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json'",
    "code": 1,
    "killed": false,
    "signal": null,
  },
  "stderr": "",
  "stdout": " ERROR  Error parsing 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json':

ENOENT: no such file or directory, open 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json'
Error: Error parsing 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json':

ENOENT: no such file or directory, open 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json'
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js:126:36)
    at Generator.throw (<anonymous>)
    at rejected (packages/graphql-typescript-definitions/lib/index.js:5:65)

",
}
`;

exports[`cli succeeds when there are no fixture errors 1`] = `
Object {
  "error": null,
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Query.graphql → packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Query.graphql.d.ts
 BUILT  packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Fragment.graphql → packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Fragment.graphql.d.ts
",
}
`;
